# cpp_template

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conanfile.txt  docker-compose.yml  setup.sh
.chglog/: config.yml
.github/workflows/: on_merge.yml
tests/: CMakeLists.txt  test_default.cpp
